5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1664_2972.log
== TEST (2019-04-16 10:18:08) 
-- CODE:
s0 = int(input("posicao inicial do objeto: "))
vel = int(input("velocidade do objeto: "))
tempo = int(input"tempo: ")
S = s0 + (vel * tempo)
if (S > 1000):
	print("Sim")
if (S < 1000):
	print("Nao")
print(S)
-- ERROR:
File "XXXX", line 3
    tempo = int(input"tempo: ")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:25) 
-- CODE:
s0 = int(input("posicao inicial do objeto: "))
vel = int(input("velocidade do objeto: "))
tempo = int(input("tempo: ")
S = s0 + (vel * tempo)
if (S > 1000):
	print("Sim")
if (S < 1000):
	print("Nao")
print(S)
-- ERROR:
File "XXXX", line 4
    S = s0 + (vel * tempo)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:30) 
-- CODE:
s0 = int(input("posicao inicial do objeto: "))
vel = int(input("velocidade do objeto: "))
tempo = int(input("tempo: "))
S = s0 + (vel * tempo)
if (S > 1000):
	print("Sim")
if (S < 1000):
	print("Nao")
print(S)
-- OUTPUT:
Sim
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:27) 
-- CODE:
s0 = int(input("posicao inicial do objeto: "))
vel = int(input("velocidade do objeto: "))
tempo = int(input("tempo: "))
S = s0 + (vel * tempo)
print(S)
if (S > 1000):
	print("Sim")
if (S < 1000):
	print("Nao")

-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:19:37) 
-- CODE:
s0 = int(input("posicao inicial do objeto: "))
vel = int(input("velocidade do objeto: "))
tempo = int(input("tempo: "))
S = s0 + (vel * tempo)
print(S)
if (S > 1000):
	print("Sim")
if (S < 1000):
	print("Nao")

-- EXECUTION TIME:
0.212506
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
